--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "cypress": "^13.12.0"
   },
   "dependencies": {
-    "axios": "^1.7.2"
+    "axios": "^1.7.2",
+    "xml-js": "^1.6.11"
   }
 }
