--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Test automation for key functionalities of the Zara.com website",
   "main": "index.js",
   "scripts": {
-    "start": "npx cypress run"
+    "start": "npx cypress run",
+    "test": "npx cypress run --spec cypress/e2e/regValidData.cy.js"
   },
   "author": "Patryk Czarnecki",
   "license": "ISC",
