--- a/package.json
+++ b/package.json
@@ -10,10 +10,29 @@
   "author": "Patryk Czarnecki",
   "license": "ISC",
   "devDependencies": {
-    "cypress": "^13.12.0"
+    "cypress": "^13.12.0",
+    "cypress-multi-reporters": "^1.6.4",
+    "mocha-junit-reporter": "^2.2.1",
+    "mochawesome": "^7.1.3",
+    "mochawesome-merge": "^4.3.0"
   },
   "dependencies": {
     "axios": "^1.7.2",
     "xml-js": "^1.6.11"
+  },
+  
+  "reporter": "cypress-multi-reporters",
+  "reporterOptions": {
+    "reporterEnabled": "mochawesome, mocha-junit-reporter",
+    "mochawesomeReporterOptions": {
+      "reportDir": "cypress/results",
+      "overwrite": false,
+      "html": false,
+      "json": true
+    },
+    "mochaJunitReporterReporterOptions": {
+      "mochaFile": "cypress/results/test-output-[hash].xml",
+      "toConsole": false
   }
+ }  
 }
